# semantic-rag-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
data/processed/: chunks.json  embeddings.json
data/raw/: resume_profile.txt
docs/: notes.md
docs/decision-docs/: 0001-use-architecture-decision-records.md  0002-use-character-based-chunking-as-baseline.md  0003-start-with-local-text-file-loader.md  0004-start-with-a-simple-ingestion-script.md  0005-use-sanitized-resume-as-initial-knowledge-source.md  0006-persist-chunks-as-json.md  0007-basic-start-with-retrieval-baseline.md  0008-add-simple-keyword-relevance-scoring.md  0009-add-basic-retrieval-evaluation-dataset.md  0010-add-basic-retrieval-accuracy-metric.md  0011-add-sentence-transformer-embedding-wrapper.md  0012-persist-chunk-embeddings-as-json.md  0013-add-cosine-similarity-semantic-retrieval.md  0014-evaluate-semantic-retrieval-baseline.md  0015-added-faiss-vector-index.md  0016-evaluation-faiss-retrieval-baseline.md  0018-refactor-duplicate-code.md  (+4 more)
eval/: retrieval_questions.json
scripts/: ask.py  compare_retrieval_methods.py  embed_chunks.py  evaluate_faiss_retrieval.py  evaluate_retrieval.py  evaluate_semantic_retrieval.py  faiss_ask.py  ingest.py  semantic_ask.py
tests/: test_chunking.py  test_compare_retrieval_methods.py  test_embeddings.py  test_evaluate_faiss_retrieval.py  test_evaluate_retrieval.py  test_evaluate_retriever.py  test_evaluate_semantic_retrieval.py  test_loaders.py  test_retriever.py  test_semantic_retriever.py  test_storage.py  test_vector_store.py
(+12 files in other folders)
