[project]
name = "semantic-rag-engine"
version = "0.1.0"
description = "A step-by-step Retrieval-Augmented Generation engine for technical docs retrieval and evaluation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nitesh Arora" }
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
rag-ingest = "rag_engine.pipeline:main"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 400
target-version = "py311"
lint.ignore=["E701"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
